--- a/src/components/header/_navbar.scss
+++ b/src/components/header/_navbar.scss
@@ -52,6 +52,12 @@
 	display: none;
 }
 
+.dropdown-btn {
+	display: block;
+	margin: 0 auto;
+	margin-top: 3.5em;
+}
+
 .user-photo {
 	object-fit: cover;
 	width: 26px;
