fix quiz button not showing

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,3 +51,4 @@ body {
 @import "./components/header/navbar.scss";
 @import "./components/Catalog/Catalog.scss";
 @import "./components/quiz/Quiz.scss";
+@import "./components/Catalog/popularCatalog.scss";
