create catalog card

--- a/src/App.scss
+++ b/src/App.scss
@@ -52,3 +52,4 @@ body {
 @import "./components/Catalog/Catalog.scss";
 @import "./components/quiz/Quiz.scss";
 @import "./components/Catalog/popularCatalog.scss";
+@import "./components/Catalog/CatalogCard.scss";
