--- a/src/components/quiz/_Quiz.scss
+++ b/src/components/quiz/_Quiz.scss
@@ -18,7 +18,7 @@
 	}
 
 	&__box {
-		background-color: #ffd414;
+		background-color: $color-yellow;
 		color: #10162f;
 		padding: $padding-md 0;
 		&-items {
