--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,6 @@
 $color-black: hsl(240, 1%, 20%);
+$color-yellow: hsl(50, 100%, 50%);
+$font-size-sml: 0.875rem;
 
 $margin-sml: 0.25em;
 $margin-md: 0.5em;
@@ -26,6 +28,7 @@ body {
 	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	line-height: 1.6;
+	color: $color-black;
 }
 
 .container {
