--- a/src/components/Catalog/popularCatalog.scss
+++ b/src/components/Catalog/popularCatalog.scss
@@ -1,7 +1,6 @@
 .popularCalalog {
-	margin-top: $margin-xlg;
-	display: grid;
-	grid-template-columns: repeat(1, 1fr);
+	margin-top: 3em;
+
 	& > h2 {
 		color: $color-black;
 		text-transform: capitalize;
