--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@ $color-black: hsl(240, 1%, 20%);
 $color-yellow: hsl(50, 100%, 50%);
 $color-purple-dark: #10162f;
 $color-purple: hsl(252, 87%, 48%);
-
+$color-bg-cream: #fff0e5;
 $font-size-sml: 0.875rem;
 
 $margin-sml: 0.25em;
@@ -26,7 +26,7 @@ $padding-xlg: 1.5em;
 }
 
 body {
-	background-color: #fff0e5;
+	background-color: $color-bg-cream;
 	margin: 0;
 	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
