--- a/src/components/Catalog/getInspireSectiion/_getInspire.scss
+++ b/src/components/Catalog/getInspireSectiion/_getInspire.scss
@@ -1,9 +1,11 @@
-.getInspire {
+.getInspireContainer {
 	margin-top: 4em;
 }
 
-.getInspireLink {
+.getInspireLink,
+.inspireLinkWithImg {
 	margin-bottom: 2em;
+
 	& > p {
 		color: $color-purple;
 		margin: 0;
@@ -17,4 +19,25 @@
 		color: $color-black;
 		font-weight: 600;
 	}
+}
+
+.inspireLinkWithImg {
+	& > img {
+		width: 100%;
+	}
+}
+
+.getInspire--btn {
+	display: block;
+	margin: 4em auto;
+	background-color: $color-bg-cream;
+	border: 1px solid rgb(100, 0, 228);
+	color: rgb(100, 0, 228);
+	font-weight: 600;
+	padding: $padding-md 3em;
+}
+
+.getInspire--btn:hover {
+	background-color: rgb(100, 0, 228);
+	color: white;
 }
