create footer and fix inspire btn

--- a/src/App.scss
+++ b/src/App.scss
@@ -61,3 +61,4 @@ body {
 @import "./components/Catalog/CatalogCard.scss";
 @import "./components/Catalog/newsNoteWorthy/newsNoteWorth.scss";
 @import "./components/Catalog/getInspireSectiion/getInspire.scss";
+@import "./components/footer/footer.scss";
