--- a/src/components/quiz/_Quiz.scss
+++ b/src/components/quiz/_Quiz.scss
@@ -18,7 +18,6 @@
 	}
 
 	&__box {
-		// background-color: $color-yellow;
 		color: #10162f;
 		text-decoration: none;
 
@@ -55,13 +54,19 @@
 }
 .quizSvg_1,
 .quizSvg_2 {
-	z-index: 100;
+	z-index: 200;
 }
 .quizSvg_1 {
 	position: absolute;
 	left: -40px;
 	bottom: 0;
 	height: 50px;
+}
+.quizSvg_2--bg {
+	position: absolute;
+	left: -65px;
+	bottom: 0;
+	height: 65px;
 }
 .quizSvg_2 {
 	position: absolute;
