add 2 column grid

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,4 @@
 @import "./components/Catalog/newsNoteWorthy/_newsNoteWorth";
 @import "./components/Catalog/getInspireSectiion/_getInspire";
 @import "./components/footer/_footer";
+@import "./_mediaQuery";
