--- a/src/components/Catalog/_CatalogCard.scss
+++ b/src/components/Catalog/_CatalogCard.scss
@@ -2,7 +2,11 @@
 	display: grid;
 	grid-template-columns: repeat(1, 1fr);
 	row-gap: 2em;
+	grid-auto-flow: dense;
+	// grid-auto-rows: 1fr;
+	// grid-auto-rows: min-content;
 }
+
 .catalogCard {
 	border: 1px solid $color-black;
 	background-color: white;
@@ -12,6 +16,8 @@
 	z-index: 100;
 	text-decoration: none;
 	color: $color-black;
+	// height: fit-content;
+
 	& > h3 {
 		color: $color-black;
 	}
@@ -32,11 +38,10 @@
 	flex-direction: column;
 
 	&--svg {
-		height: 200px;
-		max-width: 160px;
+		width: fit-content;
 		align-self: center;
-		margin-top: 3em;
-		margin-bottom: 2.5em;
+		padding-top: 3em;
+		padding-bottom: 2.5em;
 	}
 	& > p {
 		text-transform: capitalize;
