--- a/src/components/Catalog/getInspireSectiion/_getInspire.scss
+++ b/src/components/Catalog/getInspireSectiion/_getInspire.scss
@@ -1,17 +1,21 @@
 .getInspireContainer {
 	margin-top: 4em;
 }
-.getInspire {
+.getInspire__grid--1 {
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	column-gap: 2em;
+}
+.getInspire__grid--2,
+.getInspire__grid--3 {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	column-gap: 2em;
-	// width: 100%;
 }
-.getInspireLink {
+.getInspire__grid--2 .span-2-Col {
 	grid-column: 1 / span 2;
 }
-
-.span2Col {
+.getInspire__grid--3 .getInspireLink {
 	grid-column: 1 / span 2;
 }
 
@@ -28,7 +32,7 @@
 
 	& > a {
 		text-decoration: none;
-		font-size: 1.4rem;
+		font-size: 1.2rem;
 		color: $color-black;
 		font-weight: 600;
 	}
