--- a/src/components/Catalog/getInspireSectiion/_getInspire.scss
+++ b/src/components/Catalog/getInspireSectiion/_getInspire.scss
@@ -15,9 +15,16 @@
 .getInspire__grid--2 .span-2-Col {
 	grid-column: 1 / span 2;
 }
-.getInspire__grid--3 .getInspireLink {
+
+.getInspire__grid--2 .getInspireLink:nth-child(5),
+.getInspire__grid--2 .getInspireLink:nth-child(6),
+.getInspire__grid--2 .getInspireLink:nth-child(7),
+.getInspire__grid--2 .getInspireLink:nth-child(8) {
 	grid-column: 1 / span 2;
 }
+// .getInspire__grid--3 .getInspireLink {
+// 	grid-column: 1 / span 2;
+// }
 
 .getInspireLink,
 .inspireLinkWithImg {
