--- a/src/components/Catalog/getInspireSectiion/_getInspire.scss
+++ b/src/components/Catalog/getInspireSectiion/_getInspire.scss
@@ -10,6 +10,7 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	column-gap: 2em;
+	position: relative;
 }
 .getInspire__grid--2 .span-2-Col {
 	grid-column: 1 / span 2;
