fix quiz svg height

--- a/src/_mediaQuery.scss
+++ b/src/_mediaQuery.scss
@@ -18,6 +18,9 @@
 		bottom: 0;
 		height: 55px;
 	}
+	.quizSvg_2 {
+		height: fit-content;
+	}
 	.quiz__box-items > p {
 		display: inline-block;
 		font-size: 1.1rem;
