--- a/src/components/Catalog/_CatalogCard.scss
+++ b/src/components/Catalog/_CatalogCard.scss
@@ -6,6 +6,11 @@
 	// grid-auto-rows: 1fr;
 	// grid-auto-rows: min-content;
 }
+.cardContainer__subgrid {
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	row-gap: 2em;
+}
 
 .catalogCard {
 	border: 1px solid $color-black;
@@ -29,7 +34,7 @@
 }
 
 .exploreCard {
-	padding: $padding-xlg $padding-lg;
+	padding: $padding-md $padding-lg;
 	text-transform: capitalize;
 }
 
