--- a/src/components/Catalog/_CatalogCard.scss
+++ b/src/components/Catalog/_CatalogCard.scss
@@ -6,7 +6,7 @@
 	// grid-auto-rows: 1fr;
 	// grid-auto-rows: min-content;
 }
-.cardContainer__subgrid {
+.cardContainer__subgrid-1-row {
 	display: grid;
 	grid-template-columns: repeat(1, 1fr);
 	row-gap: 2em;
