change navbar items fontsize

--- a/src/_mediaQuery.scss
+++ b/src/_mediaQuery.scss
@@ -220,7 +220,7 @@
 		width: 100%;
 		& > a {
 			margin-top: 0.4em;
-
+			font-size: 0.97rem;
 			text-decoration: none;
 			color: $color-black;
 		}
