change explore card padding

--- a/src/components/Catalog/_CatalogCard.scss
+++ b/src/components/Catalog/_CatalogCard.scss
@@ -39,7 +39,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
-	padding: $padding-lg $padding-lg;
+	padding: $padding-sml $padding-lg;
 	text-transform: capitalize;
 }
 
