add quiz svg for bg

--- a/src/_mediaQuery.scss
+++ b/src/_mediaQuery.scss
@@ -8,7 +8,7 @@
 	}
 	.quizSvg_2--bg {
 		position: absolute;
-		left: -75px;
+		left: 0;
 		bottom: 0;
 		height: 75px;
 	}
@@ -318,9 +318,6 @@
 	}
 	.quizSvg_2 {
 		height: 55px;
-	}
-	.quizSvg_2--bg {
-		left: -85px;
 	}
 
 	.courseContainer__outer {
